--- a/ISS-Loc/src/App.css
+++ b/ISS-Loc/src/App.css
@@ -1,3 +1,7 @@
+.title{
+  text-align: center;
+  margin-bottom: 1rem;
+}
 .center{
   display: grid;
   grid-template-columns: repeat(10,1fr);
@@ -15,6 +19,7 @@
   align-self: center;
   animation: rotation 80s linear infinite;
 }
+
 
 @keyframes rotation{
   0%{
